# prime_shield_analyzer

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  prime_shields.py
.github/workflows/: deploy-pages.yml  deploy_report.yml  rust.yml
report/: gap_spectrum.csv  gap_spectrum.json  global_stats.csv  index.html  oscillation_series.csv  oscillation_series.json  report_metadata.json
src/: config.rs  main.rs  output.rs  report.rs  sieve.rs  stats.rs
tests/: cli.rs
