[package]
name = "prime_shield_analyzer"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
bitvec = "1.0.1"
cache-size = "0.7.0"
clap = { version = "4.5.53", features = ["derive"] }
csv = "1.4.0"
indicatif = "0.18.3"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"
